--- a/instagram-clone2/app/build.gradle
+++ b/instagram-clone2/app/build.gradle
@@ -28,15 +28,17 @@ dependencies {
     })
 
 
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-core:11.2.2'
+    compile 'com.google.firebase:firebase-messaging:11.2.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:percent:25.3.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-database:11.2.2'
+    compile 'com.google.firebase:firebase-auth:11.2.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
