--- a/instagram-clone2/app/src/main/AndroidManifest.xml
+++ b/instagram-clone2/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.kinny.instagram_clone">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UserList"></activity>
     </application>
 
 </manifest>
