--- a/instagram-clone2/app/build.gradle
+++ b/instagram-clone2/app/build.gradle
@@ -36,8 +36,10 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.google.firebase:firebase-database:11.2.2'
     compile 'com.google.firebase:firebase-auth:11.2.2'
+    compile 'com.google.firebase:firebase-storage:11.2.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
