Added firebase signout feature

--- a/instagram-clone2/app/src/main/AndroidManifest.xml
+++ b/instagram-clone2/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.example.kinny.instagram_clone" />
             </intent-filter>
         </activity>
         <activity android:name=".UserList"></activity>
