--- a/instagram-clone2/app/build.gradle
+++ b/instagram-clone2/app/build.gradle
@@ -37,8 +37,12 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.2.2'
     compile 'com.google.firebase:firebase-auth:11.2.2'
     compile 'com.google.firebase:firebase-storage:11.2.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
