--- a/instagram-clone2/app/src/main/AndroidManifest.xml
+++ b/instagram-clone2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <meta-data
@@ -20,7 +21,12 @@
                     android:value="com.example.kinny.instagram_clone" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserList"></activity>
+        <activity
+            android:name=".UserList"
+             />
+        <activity android:name=".UserFeed"
+            android:parentActivityName=".UserList"
+            ></activity>
     </application>
 
 </manifest>
