--- a/instagram-clone2/app/build.gradle
+++ b/instagram-clone2/app/build.gradle
@@ -1,4 +1,15 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+}
 apply plugin: 'com.android.application'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 25
@@ -28,26 +39,24 @@ dependencies {
     })
 
 
-    compile 'com.google.firebase:firebase-core:11.2.2'
-    compile 'com.google.firebase:firebase-messaging:11.2.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:percent:25.3.1'
+
+    compile 'com.google.firebase:firebase-core:11.2.2'
+    compile 'com.google.firebase:firebase-messaging:11.2.2'
     compile 'com.google.firebase:firebase-database:11.2.2'
     compile 'com.google.firebase:firebase-auth:11.2.2'
     compile 'com.google.firebase:firebase-storage:11.2.2'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.firebaseui:firebase-ui-storage:0.6.0'
+
     testCompile 'junit:junit:4.12'
+
 }
-
-
-
-
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
