--- a/instagram-clone2/app/src/main/AndroidManifest.xml
+++ b/instagram-clone2/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kinny.instagram_clone">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
 
     <application
         android:allowBackup="false"
@@ -29,6 +32,7 @@
         <activity android:name=".UserFeed"
             android:parentActivityName=".UserList"
             ></activity>
+
     </application>
 
 </manifest>
